--- a/src/app/home/presentation/home-view/home-view.component.html
+++ b/src/app/home/presentation/home-view/home-view.component.html
@@ -41,7 +41,7 @@
       <app-card
         [starship]="starship"
         (clickImage)="onImageSelected($event)"
-        image="seed/picsum"
+        [image]="getImage(starship.url)"
         ></app-card>
       } 
     }@placeholder {
