--- a/src/app/home/presentation/components/card/card.component.html
+++ b/src/app/home/presentation/components/card/card.component.html
@@ -1,10 +1,12 @@
 <div 
   (click)="onClickImage()"
   class="card cursor-pointer">
-    <img 
-      class="rounded-t-lg aspect-video" 
-      loading="lazy" alt="imagen"
-      [src]="'https://picsum.photos/' + image() + '/640/300'" alt="imágen de picsum.photos" />
+    <div class="flex items-center justify-center h-64">
+      <img 
+        class="rounded-t-lg  w-auto h-full" 
+        loading="lazy" 
+        [src]="image()" alt="{{starship()?.name}}" />
+    </div>
     <div class="p-5">
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{starship()?.name}}</h5>
         <p class="mb-3 font-normal text-gray-700 ">{{starship()?.manufacturer}}</p>
