--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="flex justify-center card">
-  Test de Login para <strong>Grupo xxxx</strong> por <strong>Pepe Belmonte</strong>
+  Test de app Angular por <strong>Pepe Belmonte</strong>
 </div>
